--- a/tests/unit test.ipynb
+++ b/tests/unit test.ipynb
@@ -18,7 +18,6 @@
    },
    "outputs": [],
    "source": [
-    "import pytest\n",
     "from pyspark.sql import DataFrame\n",
     "from pyspark.sql.functions import col\n",
     "from notebooks.utils import filter_valid_age\n"
@@ -78,7 +77,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "9d45ce63-c0fb-47be-8b6d-9095bac8f41d",
      "showTitle": false,
@@ -94,7 +96,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "ad87f6fb-a2cf-404a-ae91-56d3cb22615c",
      "showTitle": false,
@@ -110,7 +115,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "0e863e1a-dde6-44da-a1fa-d51d577cb39a",
      "showTitle": false,
@@ -126,7 +134,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "3d54ff7d-dc9e-4301-b7bc-bb31b597b335",
      "showTitle": false,
@@ -142,7 +153,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "5c0aa8df-4eb4-4e18-bc62-1f3ac442315e",
      "showTitle": false,
@@ -158,7 +172,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "b4a115f6-af24-40c4-9a3b-aea376455afe",
      "showTitle": false,
@@ -174,7 +191,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "cc88f778-318b-4e75-ba7f-e5a3578acd81",
      "showTitle": false,
@@ -190,7 +210,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "407902df-497c-4d39-867a-400b8fdad3ab",
      "showTitle": false,
@@ -206,7 +229,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "0dea3825-3191-4d76-a689-40dd5a900ae9",
      "showTitle": false,
@@ -222,7 +248,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "6127dc78-44ec-4b35-91ba-29312672557f",
      "showTitle": false,
@@ -238,7 +267,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "97e6979f-9c0a-43b8-8ba9-5211bef56a0e",
      "showTitle": false,
@@ -254,7 +286,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "661f7c16-2658-4b90-a2ab-cd6117d4ca44",
      "showTitle": false,
@@ -270,7 +305,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "15c1a722-ea6e-4982-8edb-dc9ae3459c44",
      "showTitle": false,
@@ -286,7 +324,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "66ff60fc-e29d-4c1f-8f6d-1a3cc8858dd0",
      "showTitle": false,
@@ -302,7 +343,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "98cd55c4-7fd6-4cf9-b88d-18830fe2759f",
      "showTitle": false,
